fix small tile to have 100% width on small viewport

--- a/src/documents/styles/modules/tiles.css.less
+++ b/src/documents/styles/modules/tiles.css.less
@@ -364,11 +364,6 @@
 					padding: 68px 10% 0
 				}
 
-				//Put tile image at the bottom
-				// .tile-image {
-				// 	position: absolute;
-				// 	bottom:0px;
-				// }
 				ul.tags {
 					padding-left: 10%;
 					.tile-doodle {
@@ -376,7 +371,7 @@
 					}
 				}
 			}
-			&.medium, &.large, &.featured, &.hero {
+			&.small, &.medium, &.large, &.featured, &.hero {
 				h2 {
 					font-size: 2.5em;
 				}
